--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,5 @@
 ---
-title: "Dropbpx"
+title: "Richard Everitt's homepage"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+Under construction...
