--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Richard Everitt's homepage"
+title: "About"
 ---
 
 I am an Reader in Statistics at the University of Warwick. My research is in methodology for Bayesian computation, applied to problems in statistical genetics, neuroscience, ecology, weather and climate, spatial statistics, network analysis and signal processing. For my publications see my Google Scholar page. I try to keep my orcid profile reasonably up to date.
