--- a/index.qmd
+++ b/index.qmd
@@ -5,13 +5,14 @@ title: "About"
 ::: {.grid}
 
 ::: {.g-col-7}
-I am an Reader in [Statistics at the University of Warwick](https://warwick.ac.uk/fac/sci/statistics/). My research is in methodology for Bayesian computation, applied to problems in statistical genetics, neuroscience, ecology, weather and climate, spatial statistics, network analysis and signal processing. You can also find me on some other sites:
+I am an Reader in [Statistics at the University of Warwick](https://warwick.ac.uk/fac/sci/statistics/). My research is in methodology for Bayesian computation, applied to problems in statistical genetics, neuroscience, ecology, weather and climate, spatial statistics, network analysis and signal processing. You can also find me elsewhere on the web:
 
 * [university page](https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/everitt/) (contains contact information)
 * [bluesky](https://bsky.app/profile/bayesianstats.bsky.social)
 * [linkedin](https://www.linkedin.com/in/richard-everitt-61670b12/)
 * [mastodon](https://mastodon.social/@bayesian_stats)
 * [X/twitter](https://x.com/bayesian_stats)
+* [youtube](https://www.youtube.com/@bayesian_stats)
 * [github](https://github.com/richardgeveritt)
 * [orcid](https://orcid.org/0000-0002-0822-5648)
 
