--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ I am an Reader in [Statistics at the University of Warwick](https://warwick.ac.u
 :::
 
 ::: {.g-col-4}
-![](Richard Everitt-4.jpg)
+![](re.jpg)
 :::
 
 :::
